	  backend 1.4.26, added support for Agfa Arcus 1200, better support 
	  for Benq 5000.

2003-04-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* lib/getopt.c: Removed #include again, breaks compilation on
	  OS/2.
	* config.guess config.sub: New upstream versions.
	* acinclude.m4 aclocal.m4 configure ltmain.sh: New libtool
	  upstream realease: 1.5.

2003-04-27  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/hp5400_internal.c backend/canon630u-common.c
	  backend/epson_scsi.c: Minor compilation fixes for MacOS X and
	  OS/2.
	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Added Genius 3x as working scanner,
	  removed testing flag. Added Artec 2000 e+ to manpage. Added
	  detection for the Plustek OpticPro U16B.
	* doc/descriptions/unsupported.desc: Added more information for
	  the HP Scanjet 2300c.
	* lib/getopt.c: Add missing includes.
	* po/Makefile.in po/sane-backends.de.po po/sane-backends.es.po
	  po/sane-backends.fr.po po/sane-backends.nl.po
	  po/sane-backends.pt.po po/sane-backends.ru.po
	  po/sane-backends.sv.po: Added hp5400 backend. Updated po files.
	* TODO: Added entry about MacOS X SCSI patches.

2003-04-26  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* README.netbsd: Some additions concerning uscanner driver.
	* TODO: Removed hp4200 link. Added hp5400 GPL/SANE issue. Added
	  avision hpusbscsi documentation issue. Removed scanimage/OS/2
	  problem.
	* doc/sane-mustek.man: Added some more details for SCSI adapters.
	* doc/descriptions/ibm.desc: Ricoh IS-420 doesn't seem to work
	  out-of-the-box.
	* doc/descriptions/unsupported.desc: Added Visioneer OneTouch 4800
	  USB. Added more information for the Genius ColorPage HR7X Slim
	  and Microtek Scanport 3000.

2003-04-23  Frank Zago  <fzago at austin dot rr dot com>

	* backend/teco2.c backend/teco2.h doc/sane-teco2.man